// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Outline button 1`] = `
<button
  className="ant-btn ant-btn-default rounded-[1px] border text-shadow-none shadow-none flex items-center justify-center gap-2 px-[25px] 
				bg-credix-primary text-neutral-100 border-neutral-100
				hover:text-neutral-60 hover:border-neutral-60
				active:text-neutral-40 active:border-neutral-60
				disabled:border-action-disable disabled:text-disabled
			 text-base font-medium h-[42px]"
  onClick={[Function]}
  type="button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Outline button disabled 1`] = `
<button
  className="ant-btn ant-btn-default rounded-[1px] border text-shadow-none shadow-none flex items-center justify-center gap-2 px-[25px] 
				bg-credix-primary text-neutral-100 border-neutral-100
				hover:text-neutral-60 hover:border-neutral-60
				active:text-neutral-40 active:border-neutral-60
				disabled:border-action-disable disabled:text-disabled
			 text-base font-medium h-[42px]"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Outline button with icon 1`] = `
<button
  className="ant-btn ant-btn-default rounded-[1px] border text-shadow-none shadow-none flex items-center justify-center gap-2 px-[25px] 
				bg-credix-primary text-neutral-100 border-neutral-100
				hover:text-neutral-60 hover:border-neutral-60
				active:text-neutral-40 active:border-neutral-60
				disabled:border-action-disable disabled:text-disabled
			 text-base font-medium h-[42px]"
  onClick={[Function]}
  type="button"
>
  <svg
    className="fill-current"
    viewBox="0 0 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2.66699 4.66659C2.66699 2.82564 4.15938 1.33325 6.00033 1.33325H10.0003C11.8412 1.33325 13.3336 2.82564 13.3336 4.66659V12.6594C13.3336 14.3619 11.3421 15.2859 10.0421 14.1865L8.43082 12.8238C8.1823 12.6136 7.81834 12.6136 7.56982 12.8238L5.95848 14.1865C4.65855 15.2859 2.66699 14.3619 2.66699 12.6594V4.66659ZM6.00033 2.66659C4.89576 2.66659 4.00033 3.56202 4.00033 4.66659V12.6594C4.00033 13.2269 4.66418 13.5349 5.09749 13.1684L6.70883 11.8057C7.45439 11.1752 8.54626 11.1752 9.29182 11.8057L10.9031 13.1684C11.3364 13.5349 12.0003 13.2269 12.0003 12.6594V4.66659C12.0003 3.56202 11.1049 2.66659 10.0003 2.66659H6.00033Z"
    />
  </svg>
  <span>
    Button
  </span>
</button>
`;

exports[`Primary button 1`] = `
<button
  className="ant-btn ant-btn-primary rounded-[1px] border text-shadow-none shadow-none flex items-center justify-center gap-2 px-[25px] 
				bg-action-primary border-action-primary text-credix-primary
				hover:bg-neutral-60 hover:border-neutral-60
				active:bg-neutral-40 active:border-neutral-40 active:text-neutral-100
				disabled:bg-action-disable disabled:border-transparent disabled:text-disabled
			 text-base font-medium h-[42px]"
  onClick={[Function]}
  type="button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Primary button disabled 1`] = `
<button
  className="ant-btn ant-btn-primary rounded-[1px] border text-shadow-none shadow-none flex items-center justify-center gap-2 px-[25px] 
				bg-action-primary border-action-primary text-credix-primary
				hover:bg-neutral-60 hover:border-neutral-60
				active:bg-neutral-40 active:border-neutral-40 active:text-neutral-100
				disabled:bg-action-disable disabled:border-transparent disabled:text-disabled
			 text-base font-medium h-[42px]"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Primary button with icon 1`] = `
<button
  className="ant-btn ant-btn-primary rounded-[1px] border text-shadow-none shadow-none flex items-center justify-center gap-2 px-[25px] 
				bg-action-primary border-action-primary text-credix-primary
				hover:bg-neutral-60 hover:border-neutral-60
				active:bg-neutral-40 active:border-neutral-40 active:text-neutral-100
				disabled:bg-action-disable disabled:border-transparent disabled:text-disabled
			 text-base font-medium h-[42px]"
  onClick={[Function]}
  type="button"
>
  <svg
    className="fill-current"
    viewBox="0 0 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2.66699 4.66659C2.66699 2.82564 4.15938 1.33325 6.00033 1.33325H10.0003C11.8412 1.33325 13.3336 2.82564 13.3336 4.66659V12.6594C13.3336 14.3619 11.3421 15.2859 10.0421 14.1865L8.43082 12.8238C8.1823 12.6136 7.81834 12.6136 7.56982 12.8238L5.95848 14.1865C4.65855 15.2859 2.66699 14.3619 2.66699 12.6594V4.66659ZM6.00033 2.66659C4.89576 2.66659 4.00033 3.56202 4.00033 4.66659V12.6594C4.00033 13.2269 4.66418 13.5349 5.09749 13.1684L6.70883 11.8057C7.45439 11.1752 8.54626 11.1752 9.29182 11.8057L10.9031 13.1684C11.3364 13.5349 12.0003 13.2269 12.0003 12.6594V4.66659C12.0003 3.56202 11.1049 2.66659 10.0003 2.66659H6.00033Z"
    />
  </svg>
  <span>
    Button
  </span>
</button>
`;
